# comfyui_vfx-bridge

./: .gitignore  LICENSE  README.md  __init__.py  install.txt  kanban.md  nodes.py  pyproject.toml  requirements.txt
sample_workflow/: .gitkeep
web/: vfx_bridge_style.js
web/js/: vfx_bridge_style.js
