[project]
name = "comfyui_vfx-bridge"
description = "EXR hotfolder loader with matte splitting, metadata passthrough, and OCIO color management for Nuke/Houdini integration in ComfyUI"
version = "0.0.1"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "OpenEXR>=3.2.0",
    "Imath>=3.1.0",
]

[project.urls]
Repository = "https://github.com/beverlyhillscop90210/comfyui_vfx-bridge"

[tool.comfy]
PublisherId = ""  # TODO: Fill in your Publisher ID from Comfy Registry
DisplayName = "VFX Bridge"
Icon = ""  # TODO: Add icon URL (SVG, PNG, JPG or GIF, MAX. 800x400px)

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
